# moonpanel

./: LICENSE  README.md  pyproject.toml
src/: __main__.py  core.py
src/moonpanel/: __main__.py  core.py
